add all the links to the  Resources section and style them

--- a/themes/montessori-theme/sass/_contact-form.scss
+++ b/themes/montessori-theme/sass/_contact-form.scss
@@ -26,21 +26,21 @@
   }
 }
 
-  h3{
-    width: 152px;
-    height: 21px;
-    font-family: ".AppleSystemUIFont";
-    font-size: 18px;
-    line-height: 21px;
-    color: #000000;
-  @include desktop{
-    width: 1295px;
-    height: 55px;
-    font-family: 'Asap';
-    font-size: 38px;
-    line-height: 55px;
-  }
-}
+  // h3{
+  //   width: 152px;
+  //   height: 21px;
+  //   font-family: ".AppleSystemUIFont";
+  //   font-size: 18px;
+  //   line-height: 21px;
+  //   color: #000000;
+  // @include desktop{
+  //   width: 1295px;
+  //   height: 55px;
+  //   font-family: 'Asap';
+  //   font-size: 38px;
+  //   line-height: 55px;
+  // }
+// }
 
 }
 
