--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -263,18 +263,17 @@
     flex-direction: column;
     align-items: center;
     @include desktop {
-         @include flex(flex-start,space-between);
+         @include flex(center,space-between);
         flex-direction: row;
         flex-wrap: wrap;
     }
 
     img {
-        width: 230px;
-        height: 230px;
+        width: 330px;
+        height: 330px;
         @include desktop {
             margin-top: 100px;
-            width: 300px;
-            height: 300px;
+
         }
     }
 }
@@ -288,7 +287,7 @@
     }}
     width: 90%;
     @include desktop {
-        width: 65%;
+        width: 60%;
         min-width: 50%;
 
         blockquote {
@@ -318,8 +317,11 @@
         }
 
         p {
+          display: inline;
             padding-top: 4px;
-            text-align: left;
+            text-align: left;@include desktop{
+              display: inline-block;
+            };
         }
     }
 }
@@ -397,17 +399,28 @@
     }
 }
 ///Archive ////
-
+.fa-caret-right{
+  color: $color_btn_hover_green;
+  padding-right: 5px;
+}
 .the-archive ul {
-    width: 500px;
-    line-height: 2.5rem;
-    font-size: 1.6rem;
+width: 450px;
+    line-height: 2rem;
+    font-size: 1.3rem;
     font-family: $font_title;
+    @include desktop{
+      line-height: 2.5rem;
+      font-size: 1.6rem;
+      width: 600px
+    };
 
     li {
         padding-left: 30px;
         line-height: inherit;
-        font-size: 1.4rem;
+
+    a{font-size: 1.2rem;@include desktop{font-size: 1.4rem;}
+          color: $color_btn_hover_green;
+      }
     }
 }
 
