--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -9,7 +9,7 @@
 // @media screen and (max-width: 480px) {
 
 .nw-program-wrapper {
-	max-width: $mobile_width;
+	max-width: $desktop_width;
 	height: auto;
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
@@ -17,28 +17,27 @@
 	align-items: center;
 }
 // fonts
-
-h1,
-h2,
-h3 {
-	font-family: $font_title;
-	font-weight: normal;
-}
-
-h1 {
-	font-size: 2.25rem;
-	line-height: 2.625rem;
-}
-
-h2 {
-	font-size: 1.875rem;
-	line-height: 2.125rem;
-}
-
-h3 {
-	font-size: 1.5rem;
-	line-height: 1.6875rem;
-}
+// h1,
+// h2,
+// h3 {
+// 	font-family: $font_title;
+// 	font-weight: normal;
+// }
+//
+// h1 {
+// 	font-size: 2.25rem;
+// 	line-height: 2.625rem;
+// }
+//
+// h2 {
+// 	font-size: 1.875rem;
+// 	line-height: 2.125rem;
+// }
+//
+// h3 {
+// 	font-size: 1.5rem;
+// 	line-height: 1.6875rem;
+// }
 
 p {
 	font-size: 1.625rem;
@@ -61,6 +60,7 @@ p {
 	text-decoration: none;
 }
 // Section Why NW Program Section
+
 .nw-program {
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
@@ -68,6 +68,9 @@ p {
 	.why-nw {
 		p {
 			display: block;
+			@include desktop {
+				text-align-last: right;
+			};
 		}
 	}
 
@@ -76,7 +79,19 @@ p {
 		justify-content: center;
 		margin-top: $basic_margin*5.5;
 		margin-bottom: $basic_margin*3;
+		@include desktop {
+			float: right;
+			width: 900rem;
+			height: 300px;
+		};
 	}
+}
+
+.nw-part1 {
+	@include desktop {
+		display: flex;
+		flex-direction: row;
+	};
 }
 // Funding Section
 .funding {
@@ -85,24 +100,46 @@ p {
 	margin-top: $basic_margin*3;
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
-
-	.funding-img {
-		margin-top: $basic_margin*40;
-	}
-
-	.funding-det {
-		display: block;
-	}
-
 	.funding-img,
 	.money-spend-img {
 		display: flex;
 		justify-content: center;
+		@include desktop{
+			width: 50%;
+			margin-bottom: 4rem;
+		}
+	}
+	.nw-part2 {
+	@include desktop {
+			display: flex;
+			flex-direction: row;
+		}
+}
+	@include desktop{
+	.nw-part3{
 
-		img {
-			width: 87%;
-			margin-right: $basic_margin/5;
-			margin-bottom: $basic_margin;
+		display:flex;
+		flex-direction: row-reverse;
+	}
+		.money-spend-para{
+			display: flex;
+			flex:25%;
+			height: 50%;
+			flex-shrink: 2;
+
+
+		}
+		img{
+			height:60%;
+		}
+
+}
+
+
+	.red-border-container {
+		@include desktop {
+			width: 60%;
+			height: 20rem;
 		}
 	}
 
@@ -190,13 +227,6 @@ p {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			@include tablet {
-				flex: 0.03;
-			}
-			@include desktop {
-				flex: 1;
-				justify-content: space-around;
-			}
 		}
 
 		.flip-container {
