--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -484,10 +484,6 @@ textarea {
 # Widgets
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
-# Content
---------------------------------------------------------------*/
-/* Posts and pages */
-/*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
 .page-content .wp-smiley,
@@ -547,9 +543,18 @@ object {
 .gallery-caption {
   display: block; }
 
+.masthead {
+  position: absolute; }
+
 .site-content {
-  padding-top: 110px;
+  padding-top: 160px;
   top: 0; }
+
+.home .site-content {
+  padding-top: 0px; }
+  @media (min-width: 768px) {
+    .home .site-content {
+      padding-top: 140px; } }
 
 .main-navigation-container {
   display: -ms-flexbox;
@@ -591,6 +596,7 @@ div .menu-primary-menu-container {
 
 @media (min-width: 768px) {
   .menu-primary-menu-container {
+    white-space: nowrap;
     display: inline-block; }
     .menu-primary-menu-container ul li {
       display: inline; }
@@ -599,11 +605,10 @@ div .menu-primary-menu-container {
         text-decoration: none;
         color: #000;
         color: #231f20;
-        font-size: 1.6rem;
+        font-size: 1.2rem;
         border-top: 6px solid transparent;
         list-style: none;
-        padding: 15px 0;
-        margin: 0 5px; } }
+        padding: 15px 5px; } }
 
 .responsive-menu-button {
   margin-top: 0.1rem !important; }
@@ -652,7 +657,10 @@ button#responsive-menu-button {
     padding-top: 25px; }
     @media (min-width: 768px) {
       .montessori-logo img {
-        padding-top: 0; } }
+        height: 100px;
+        width: 300px;
+        padding-top: 0px;
+        margin-top: 0px; } }
     .montessori-logo img a {
       bottom: -20px;
       cursor: pointer;
@@ -660,8 +668,9 @@ button#responsive-menu-button {
       color: transparent; }
 
 .main-menu-wrapper {
+  border-bottom: 2px solid #E2E2E2;
   width: 100%;
-  height: 65px;
+  height: 80px;
   display: flex;
   display: -ms-flexbox;
   -ms-flex-align: center;
@@ -670,28 +679,28 @@ button#responsive-menu-button {
       justify-content: space-between; }
   @media (min-width: 768px) {
     .main-menu-wrapper {
-      height: 90px;
-      white-space: nowrap;
-      overflow: hidden; } }
+      border-bottom: none;
+      height: 90px; } }
 
 .site-header {
   z-index: 999;
   min-width: 380px;
   width: 100%;
   background: #fff;
-  position: fixed;
+  position: absolute;
   top: 0; }
+  @media (min-width: 768px) {
+    .site-header {
+      position: fixed; } }
 
 .home .site-header {
+  padding-top: 0;
   position: absolute; }
 
 .back-to-top {
   position: absolute;
-  left: 0; }
-
-div .secondary li a {
-  padding: 0 10px;
-  line-height: 3.2rem; }
+  left: 0;
+  margin-right: 30px; }
 
 div {
   position: relative; }
@@ -709,22 +718,25 @@ div {
 .secondary li:nth-child(2) {
   margin-left: 70px; }
 
+div .secondary li a {
+  padding: 0 5px;
+  line-height: 2.3rem; }
+  @media (min-width: 768px) {
+    div .secondary li a {
+      line-height: 2.3rem; } }
+
 div .secondary {
   position: relative;
-  text-align: right;
-  min-width: 80%;
-  height: 100%;
   font-family: "PT Sans", sans-serif;
   text-align: center;
   padding-right: 5px;
-  margin-top: 10px;
   background-color: #248E6A; }
   @media (min-width: 768px) {
     div .secondary {
       text-align: right;
-      white-space: inherit;
-      padding: 5px 20 10px 10;
-      height: 65px; } }
+      padding: 8px 10px;
+      height: 70px;
+      margin-top: 40px; } }
   div .secondary .active {
     background-color: #4FC8A1; }
   div .secondary ul {
